create first directive

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,3 +1,5 @@
 <h1>Welcome to the Course Roster Application</h1>
+<welcome-text></welcome-text>
+<div welkkomen message="test"></div>
 
 <h3><a ui-sref="courses">Click here to view all courses</a></h3>
