--- a/partials/courses.html
+++ b/partials/courses.html
@@ -13,7 +13,7 @@
     <div class="form-group">
       <input type="text" ng-model="courseName" class="form-control" placeholder="Enter a course name">
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" enter>Submit</button>
   </form>
 </div>
 
