--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,4 @@
 <h1>Welcome to the Course Roster Application</h1>
 <welcome-text></welcome-text>
-<div welkkomen message="test"></div>
-
+<div enter>Mouse over me for secret message!</div>
 <h3><a ui-sref="courses">Click here to view all courses</a></h3>
