--- a/partials/courses.html
+++ b/partials/courses.html
@@ -17,4 +17,8 @@
   </form>
 </div>
 
+<div alert-user alert="alert()"></div>
+
+<div sample-course coursez="{{coursez}}"></div>
+
 <div ui-view> </div>
